data/derived/sp14/progs/unify/prog0958.ml.out
Characters 149-159:
  | _ -> (z/10)::(z mod 10)in
                 ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
